Allow user to edit number fields like a number input

--- a/src/components/ChaikinCurve/Controls.module.scss
+++ b/src/components/ChaikinCurve/Controls.module.scss
@@ -27,7 +27,7 @@
   background: var(--white);
 }
 
-.numberInput {
+.numberInputWrapper {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -44,6 +44,8 @@
 .numberButton {
   border: none;
   background: var(--white);
+  padding: 0 6px;
+  cursor: pointer;
 
   span {
     display: block;
@@ -52,6 +54,7 @@
 }
 
 .numberValue {
+  display: inline-block;
   background: var(--blue);
   border-radius: 2px;
   color: var(--white);
@@ -59,12 +62,41 @@
   font-variant-numeric: tabular-nums;
 }
 
+.numberInput {
+  -moz-appearance:textfield;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 2.5rem;
+  text-align: center;
+
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+
+  border: none;
+  padding: 0 4px;
+  margin: 0;
+  background: transparent;
+  background: var(--blue);
+  border-radius: 2px;
+  color: var(--white);
+  font-variant-numeric: tabular-nums;
+  font-weight: 700;
+
+  &:focus{
+    outline: none;
+  }
+}
+
 .checkboxLabel {
   display: flex;
   gap: 4px;
   font-weight: 700;
+  cursor: pointer;
 }
 
 .checkboxInput {
   accent-color: var(--blue);
+  cursor: pointer;
 }
